2008-02-12  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Setting stringfrozen property to true to all
	modules subject to GNOME 2.22 string freeze.

2008-02-08  Gil Forcada  <gforcada@gnome.org>

	* translation-tems.xml.in: Updated Czech team info.

2008-02-06  Gil Forcada  <gforcada@gnome.org>

	* translation-teams.xml.in: Updated Malay team information thanks to
	Hasbullah Bin Pit.
	* people.xml.in: Updated Hasbullah Bin Pit email.

2008-02-06  Gil Forcada  <gforcada@gnome.org>

	* data.py: os imported twice.
	Fixes #514616.

2008-02-05  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	evolution-webcal branched for gnome-2-20.

2008-02-04  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Urdu ISO 639-1 is 'ur'.
	Fixes #500302.

2008-02-02  Claude Paroz  <claude@2xlibre.net>

	* module.py: More precise grep to prevent catching old translations.
	* modules.py: Attach subpath property to branch instead of scmroot, gives
	much more flexibility.
	* gnome-modules.xml.in: Adapted banshee and release notes modules to new
	subpath location. Added banshee stable. Fixes #513638.

2008-01-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: bug-buddy branched for 2.20.

2008-01-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added Fantasdic help doc.
	* update-stats.py: Added basic support for non automake doc modules.

2008-01-29  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added swfdec-gnome.
	* releases.xml.in: Added swfdec-gnome to gnome-2-22 moduleset.
	* people.xml.in: Added Benjamin Otte.

2008-01-27  Gil Forcada  <gforcada@gnome.org>

	* compare-releases.py:
	Better wording in error messages (thanks to Claude). Closes #512124.

2008-01-20  Gil Forcada  <gforcada@gnome.org>

	* releases.xml.in:
	Removed duplicate entrys in gnome-2-22 and gnome-extras. Closes #510815.

2008-01-19  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: