@@ -610,7 +610,7 @@
       <module id="libgtop"/>
       <module id="libgweather"/>
       <module id="libwnck"/>
-      <module id="metacity"/>
+      <module id="metacity" branch="gnome-2-22"/>
       <module id="mousetweaks"/>
       <module id="nautilus"/>
       <module id="nautilus-cd-burner"/>
