@@ -1,3 +1,9 @@
+2008-02-12  Johannes Schmid <jhs@gmome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	Added metacity gnome-2-22 branch
+
 2008-02-12  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in: Setting stringfrozen property to true to all
